8154213: clean up uses of boxed primitive constructors in the java.desktop module
Reviewed-by: serb, psadhukhan